--- a/app/src/main/res/layout/activity_local_picture_selector.xml
+++ b/app/src/main/res/layout/activity_local_picture_selector.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/ivLocalPictureSelector"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
             android:src="@drawable/baseline_add_a_photo_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
