--- a/app/src/main/res/layout/activity_audio_record_and_audio_track.xml
+++ b/app/src/main/res/layout/activity_audio_record_and_audio_track.xml
@@ -29,10 +29,22 @@
             android:layout_height="wrap_content"
             android:text="音频播放"
             android:textAppearance="@android:style/TextAppearance.Widget.TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tvAudioRecordAndPlay"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAudioRecord" />
+
+
+        <TextView
+            android:id="@+id/tvAudioRecordAndPlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="音频采集同时播放"
+            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvAudioPlay" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
