OpenSLES音频采集与播放；

--- a/app/src/main/res/layout/activity_open_sl_es.xml
+++ b/app/src/main/res/layout/activity_open_sl_es.xml
@@ -16,7 +16,7 @@
             android:id="@+id/tvAudioRecord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="音频采集"
+            android:text="开始录制"
             android:textAppearance="@android:style/TextAppearance.Widget.TextView"
             app:layout_constraintBottom_toTopOf="@+id/tvAudioPlay"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
             android:id="@+id/tvAudioPlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="音频播放"
+            android:text="开始播放"
             android:textAppearance="@android:style/TextAppearance.Widget.TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
